# supabase-auth-rust

./: .env  Cargo.toml  README.md
migrations/2025_04_08_000000_create_auth_tables/: down.sql  up.sql
src/: config.rs  errors.rs  main.rs  routes.rs
src/auth/: handlers.rs  models.rs  services.rs
src/db/: mod.rs  schema.rs
src/permissions/: handlers.rs  mod.rs  models.rs  services.rs
src/utils/: jwt.rs  middleware.rs  mod.rs  password.rs  supabase.rs
