[package]
name = "supabase-auth-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
actix-web = "4.3.1"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 数据库
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
# 环境变量
dotenv = "0.15.0"
# 密码哈希
argon2 = "0.5.0"
password-hash = "0.5.0"
# JWT认证
jsonwebtoken = "8.3.0"
# 日志
env_logger = "0.10.0"
log = "0.4.19"
# 错误处理
thiserror = "1.0"
anyhow = "1.0"
# UUID生成
uuid = { version = "1.3.0", features = ["serde", "v4"] }
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }
# 异步运行时
tokio = { version = "1.29.1", features = ["full"] }
# 延迟初始化
lazy_static = "1.4.0"
futures = "0.3"
rand_core = { version = "0.6.4", features = ["std"] }
r2d2 = "0.8.10"
